--- a/1-glossary/package.json
+++ b/1-glossary/package.json
@@ -7,7 +7,8 @@
     "client-dev": "npx webpack --watch",
     "build": "npx webpack",
     "start": "node server/index.js",
-    "populate": "node dev/populateDB.js"
+    "populate": "node dev/populateDB.js",
+    "clear": "node dev/depopulateDB.js"
   },
   "license": "Unlicensed",
   "dependencies": {
