--- a/1-glossary/package.json
+++ b/1-glossary/package.json
@@ -15,12 +15,13 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-loader": "^8.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.1.4",
     "nodemon": "^2.0.7",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.41.0",
